<resources>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="command">Command</string>
    <string name="error">Error</string>
    <string name="colors">Colors</string>
    <string name="default_colors">Default colors</string>
    <string name="custom_colors">Custom colors</string>
    <string name="text_size">Text size</string>
    <string name="default_text_size">Default text size</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>

    <string name="command_runner_service_notification">Service notification</string>
    <string name="service_is_running">Service is running</string>

    <string name="main_widget_description">Display output of a given command.</string>
    <string name="cannot_update_widget_service_not_running">Cannot update the widget, as the service is not running - open the app to start it</string>
    <string name="error_creating_widget">Error while creating a widget</string>
    <string name="error_updating_preferences">Error while updating preferences</string>

    <string name="error_termux_missing">This app will not work without Termux, which is not installed.</string>
    <string name="error_termux_outdated">This app requires Termux v0.109 or later. In order to use this app, please update Termux.</string>
    <string name="permission_required">Permission required</string>
    <string name="required_permission_denied">Required permission has been denied, cannot continue</string>
    <string name="permission_RUN_COMMAND_prompt">The app needs Termux permission to run commands. Please grant the permission on the next screen.</string>

    <string name="settings_saved">Settings saved</string>
</resources>